Add id class